--- a/style.css
+++ b/style.css
@@ -1,67 +1,71 @@
-*,
-*:after,
-*:before {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -ms-box-sizing: border-box;
-    box-sizing: border-box;
-}
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&display=swap');
 
-body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
+*{
     margin: 0;
-    background: linear-gradient( #0a2732, #b1093b);
-    color: rgb(255, 255, 255);
-    display: flex;
-    text-shadow: 2px 2px 2px black;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
+    padding: 0;
+    font-family: 'Source Sans Pro', sans-serif;
 }
-
-.container {
-    width: 600px;
-}
-
-h1 {
-    font-size: 72px;
-    text-align: center;
-    
-}
-
-h4 {
-    text-align: center;
-}
-
-.row {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.col {
-    width: 48%;
-}
-
-select,
-input {
-    border-radius: 15px;
-    box-shadow: 2px 2px 2px white;
+.container{
+    background-color: #222242;
+    height: 100vh;
     width: 100%;
-    margin-bottom: 15px;
-    font-size: 20px;
-    color: rgb(255, 255, 255);
-    background-color: #0000008d;
-    padding: 8px 15px;
-    font-weight: 700;
+    text-align: center;
+    position: absolute;
 }
-
-input {
-    width: 100%;
-    padding: 10px 15px;
-    color: rgb(255, 255, 255);
-    background-color: #0000008d;
+.wrapper{
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+.wrapper p{
+    position: relative;
+    display: inline-block;
+    color: #ffffff;
+    z-index: 9999;
+    font-size: 48px;
+    margin-bottom: 120px;
+}
+.wrapper p::before{
+    content: '';
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    background-color: #151538;
+    z-index: -1;
+    border-radius: 50%;
+	left: -10%;
+    top: -118%;
+    animation-name: shine;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+}
+@keyframes shine{
+    0%,100%{
+        box-shadow: 0px 0px 32px -12px rgba(246, 180, 0, .5);
+    }
+    50%{
+        box-shadow: 0px 0px 32px 3px rgba(246, 180, 0, .5);
+    }
+}
+button{
+    background-color: #222242;
+    padding: 10px 38px;
+    border: 1px solid #A9A9A9;
+    border-radius: 28px;
+    color: #fff;
+    transition: all .2s ease;
+    outline: 0;
+}
+button:not(:last-child){
+    margin-right: 20px;
+}
+button:hover,
+button:focus
+{
+    border-color: #F6B400;
+    color: #F6B400;
+    box-shadow: 0px 4px 27px -12px #F6B400;
 }
 Footer
 © 2023 GitHub, Inc.
